--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
+<!DOCTYPE html>
+<html>
+  <head>
+  <head> 
+    <body>
+      <a href = "https://flatironschool.com"</a>
+    </body>
+</html>
 <!-- Write your HTML in this file -->
