--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
   <head>
     <body>
-      <a href = "https://flatironschool.com"<Flatiron School></a>
+      <a href = "https://flatironschool.com"</a><Flatiron School>
     </body>
 </html>
 <!-- Write your HTML in this file -->
